<resources>

    <string name="app_name">AksharTrade</string>


    <!--    login-->

    <string name="Login">LOGIN</string>
    <string name="Login_to">Login to Akshar Trade</string>
    <string name="SignUp_to">Sign up to Akshar Trade</string>
    <string name="sign_in">SIGN IN</string>

    <!--signUn-->
    <string name="SignUp">SIGN UP</string>

    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <!--    home-->
    <string name="Dashboard">Dashboard</string>
    <string name="Orders">Orders</string>
    <string name="Orders_type">Order Type</string>
    <string name="trade_book">Trade Book</string>
    <string name="History">History</string>
    <string name="Ledger">Ledger</string>
    <string name="Net_Position">Net Position</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    company_detail-->
    <string name="Volume">Volume</string>
    <string name="Bid">Bid</string>
    <string name="Ask">Ask</string>
    <string name="Open_Interest">Open Interest</string>
    <string name="ATP">ATP</string>
    <string name="Lower_Circuit">Lower Circuit</string>
    <string name="Open">Open</string>
    <string name="High">High</string>
    <string name="Low">Low</string>
    <string name="Close">Close</string>
    <string name="Upper_Circuit">Upper Circuit</string>
    <string name="Quantity">Quantity :</string>
    <string name="Price">Price :</string>
    <string name="Lot_Size">Lot Size :</string>
    <string name="Stake">Stake :</string>
    <string name="LimitHL">LimitHL</string>
    <string name="Market">Market</string>
    <string name="BUY">BUY</string>
    <string name="SELL">SELL</string>
    <string name="Order_Type">Order Type :</string>
    <string name="IV">IV (%)</string>
    <string name="IO">IO (lakhs)</string>
    <string name="strike_price">Strike Price</string>

    <!--    order-->

    <string name="LTP">LTP :</string>
    <string name="PL">P&amp;L :</string>

    <!--    history-->
    <string name="HISTORY">HISTORY</string>
    <string name="Current_Value">Current Value *</string>
    <string name="Total_Investment">Total Investment *</string>
    <string name="Today_Profit">Today\'s Profit &amp; Loss *</string>
    <string name="Profit_Loss">Profit &amp; Loss *</string>

    <!--trade_book-->
    <string name="trade">TRADE BOOK</string>

    <!--    account-->

    <string name="Account">Account Detail</string>
    <string name="Mobile">Mobile Number</string>

    <!--    watch_list-->
    <string name="watch_list">Watch List</string>
</resources>