<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AccountDetailActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/backIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_back_black_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:text="@string/Account"
                    android:textColor="@color/dark_blue_text"
                    android:textSize="@dimen/_18sdp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:src="@drawable/login_bg" />

                <TextView
                    style="@style/q_bold_blue_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_12sdp"
                    android:visibility="gone"
                    android:gravity="center"
                    android:text="" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/q_semi_blue_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/Name" />

                <EditText
                    android:id="@+id/userName"
                    style="@style/q_bold_blue_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:backgroundTint="@color/white"
                    android:text="" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:layout_marginBottom="@dimen/_14sdp"
                    android:background="@color/gray_dark" />


                <TextView
                    style="@style/q_semi_blue_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Email" />

                <EditText
                    android:id="@+id/userEmail"
                    style="@style/q_bold_blue_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:backgroundTint="@color/white"
                    android:text="" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:layout_marginBottom="@dimen/_14sdp"
                    android:background="@color/gray_dark" />

                <TextView
                    style="@style/q_semi_blue_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Mobile" />

                <EditText
                    android:id="@+id/userMobileNumber"
                    style="@style/q_bold_blue_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:backgroundTint="@color/white"
                    android:text="" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:layout_marginBottom="@dimen/_14sdp"
                    android:background="@color/gray_dark" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Update" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    </RelativeLayout>